ihb-platform-backend/k8s/gatewayservice/gatewayservice-deployment.yaml
# Deployment, описывающий pod и контейнер gatewayservice; устанавливает replica set, ресурсы, переменные и образ
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gatewayservice
  labels:
    app: gatewayservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gatewayservice
  template:
    metadata:
      name: gatewayservice
      labels:
        app: gatewayservice
    spec:
      containers:
        - name: gatewayservice
          image: nikirenegade/ihb-gatewayservice:1.0.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
