ihb-platform-backend/k8s/gatewayservice/gatewayservice-service.yaml
# Service для доступа к gatewayservice внутри/снаружи кластера 
apiVersion: v1
kind: Service
metadata:
  name: gatewayservice
  labels:
    app: gatewayservice
spec:
  selector:
    app: gatewayservice
  ports:
    - name: http
      port: 80
      targetPort: 8000
  type: ClusterIP
