ihb-platform-backend/k8s/gatewayservice/gatewayservice-ingress.yaml
# Ingress для основного API
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ihb-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gatewayservice
                port:
                  number: 80
